<resources>
    <string name="app_name">EmployeeManager</string>

    <string name="fullname">Lê Duy Khánh</string>
    <string name="position">Developer</string>
    <string name="no_result_found">No result found.</string>

    // Add Employee
    <string name="eplcode_add">Mã nhân viên</string>
    <string name="fullName_add">Họ tên</string>
    <string name="dateOfBirth_ad">Ngày sinh</string>
    <string name="address_add">Địa chỉ</string>
    <string name="gender_add">Giới tính</string>
    <string name="phoneNumber_ađ">Số điện thoại</string>
    <string name="email_add">Email</string>
    <string name="salary_add">Lương</string>
    <string name="position_add">Chức vụ</string>

    <string name="add_employee_faild">Add employee faild. Please try again!</string>

    //Image
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
</resources>
