<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_product_config_left_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guideline_employee_config_horizontal_keyline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_product_config_right_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guideline_employee_config_horizontal_keyline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputCodeEmployee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingItemEmployeeTop_16"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCodeEmployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eplcode_add" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputFullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputCodeEmployee">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName_add" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputBirthDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputFullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edBirthDay"
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateOfBirth_ad" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputBirthDay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_add" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edGender"
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender_add" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputGender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/phoneNumber_ađ" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_add" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputSalary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSalary"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salary_add" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_product_config_edit_box"
            app:layout_constraintEnd_toEndOf="@+id/guideline_product_config_right_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_product_config_left_vertical"
            app:layout_constraintTop_toBottomOf="@+id/txtInputSalary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/position_add"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

